src/test/resources/trialFiles/invalid/syntaxErr/ifNoElseStatList.wacc
# if missing else statlist

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  if true
  then
    skip
  else
  fi
end
